# simple-psb

./: .gitignore  README.md  meson.build  meson_options.txt
examples/: meson.build  publisher1.cpp  publisher2.cpp  subscriber1.cpp  subscriber2.cpp
man/: meson.build  simple-psb-broker.8.in
src/: broker.cpp  meson.build  publisher.cpp  simple-psb-broker.cpp  subscriber.cpp
src/simple-psb/: broker.hpp  publisher.hpp  subscriber.hpp
systemd/: meson.build  simple-psb-broker.service
